--- a/templates/login.html
+++ b/templates/login.html
@@ -8,7 +8,7 @@
             margin: 0; 
             padding: 0;
             font: 16px/20px microsoft yahei;
-            background-image:url('./static/doctor4.png');
+            background-image:url('/static/doctor3.png');
         }
         .container input {
             width: 400px;
