--- a/templates/contact.html
+++ b/templates/contact.html
@@ -12,7 +12,7 @@
             margin: 0; 
             padding: 0;
             font: 16px/20px microsoft yahei;
-            background-image:url('doctor3.png');
+            background-image:url('/static/doctor3.png');
         }
         .wrap {
             width: 100%;
