--- a/templates/test.html
+++ b/templates/test.html
@@ -360,13 +360,13 @@
             </tr> 
             <tr> 
                 <th scope="row">Input</th>  
-                <td><input type="text" name="age" id="age" placeholder="eg. 14" /></td> 
-                <td><input type="text" name="sex" id="sex" placeholder="1 = Male; 0 = Female"/></td> 
-                <td><input type="text" name="cpt" id="cpt" placeholder="values 0 - 3"/></td> 
-                <td><input type="text" name="rbp" id="rbp" placeholder="in mm Hg"/></td>  
-                <td><input type="text" name="sci" id="sci" placeholder="in mg/dl"/></td>
-                <td><input type="text" name="fbs" id="fbs" placeholder="1 = true; 0 = false"/></td> 
-                <td><input type="text" name="rer" id="rer" placeholder="values 0 - 2"/></td> 
+                <td><input type="text" name="aage" id="aage" placeholder="eg. 14" /></td> 
+                <td><input type="text" name="bsex" id="bsex" placeholder="1 = Male; 0 = Female"/></td> 
+                <td><input type="text" name="ccpt" id="ccpt" placeholder="values 0 - 3"/></td> 
+                <td><input type="text" name="drbp" id="drbp" placeholder="in mm Hg"/></td>  
+                <td><input type="text" name="5sci" id="esci" placeholder="in mg/dl"/></td>
+                <td><input type="text" name="ffbs" id="ffbs" placeholder="1 = true; 0 = false"/></td> 
+                <td><input type="text" name="grer" id="grer" placeholder="values 0 - 2"/></td> 
             </tr>  
             <tr>
                 <th></th> 
@@ -380,12 +380,12 @@
             </tr>
             <tr>
                 <th scope="row">Input</th> 
-                <td><input type="text" name="mhr" id="mhr" placeholder="eg. 160"/></td>  
-                <td><input type="text" name="eia" id="eia" placeholder="1 = yes; 0 = no"/></td>
-                <td><input type="text" name="ost" id="ost" placeholder="eg. 3.4"/></td> 
-                <td><input type="text" name="tso" id="tso" placeholder="values 0 - 2"/></td> 
-                <td><input type="text" name="nom" id="nom" placeholder="values 0 - 3"/></td>  
-                <td><input type="text" name="t36" id="t36" placeholder="values 0 - 7"/></td> 
+                <td><input type="text" name="hmhr" id="hmhr" placeholder="eg. 160"/></td>  
+                <td><input type="text" name="ieia" id="ieia" placeholder="1 = yes; 0 = no"/></td>
+                <td><input type="text" name="jost" id="jost" placeholder="eg. 3.4"/></td> 
+                <td><input type="text" name="ktso" id="ktso" placeholder="values 0 - 2"/></td> 
+                <td><input type="text" name="lnom" id="lnom" placeholder="values 0 - 3"/></td>  
+                <td><input type="text" name="mt36" id="mt36" placeholder="values 0 - 7"/></td> 
                 <th></th> 
             </tr>
             </table> 
