sort the query dict

--- a/templates/test.html
+++ b/templates/test.html
@@ -364,7 +364,7 @@
                 <td><input type="text" name="bsex" id="bsex" placeholder="1 = Male; 0 = Female"/></td> 
                 <td><input type="text" name="ccpt" id="ccpt" placeholder="values 0 - 3"/></td> 
                 <td><input type="text" name="drbp" id="drbp" placeholder="in mm Hg"/></td>  
-                <td><input type="text" name="5sci" id="esci" placeholder="in mg/dl"/></td>
+                <td><input type="text" name="esci" id="esci" placeholder="in mg/dl"/></td>
                 <td><input type="text" name="ffbs" id="ffbs" placeholder="1 = true; 0 = false"/></td> 
                 <td><input type="text" name="grer" id="grer" placeholder="values 0 - 2"/></td> 
             </tr>  
