fixed contact url error

--- a/templates/congratulations.html
+++ b/templates/congratulations.html
@@ -269,7 +269,7 @@
         <div class="navbar">
 <ul>
   <li><a href="/">Home</a></li>
-  <li><a href="/contac">Contact</a></li>
+  <li><a href="/contact">Contact</a></li>
   <li><a href="/about">About</a></li>
 </ul>
     <div class="wrap">
